deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ollama
  template:
    metadata:
      labels:
        app: ollama
    spec:
      containers:
      - name: ollama
        image: shubham9624/ollama-service
        ports:
        - containerPort: 8080
        command: ["python3"]
        args: ["-m", "flask", "run", "--host=0.0.0.0", "--port=8080"]
        resources:
          requests:
            cpu: "500m"
            memory: "1Gi"
          limits:
            cpu: "1"
            memory: "2Gi"
        volumeMounts:
        - mountPath: /root/.ollama
          name: ollama-volume
      volumes:
      - name: ollama-volume
        persistentVolumeClaim:
          claimName: ollama-pvc
