service.yml
apiVersion: v1
kind: Service
metadata:
  name: ollama
spec:
  type: NodePort
  selector:
    app: ollama
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30002
